--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -69,6 +69,6 @@ services:
 form:
   pipeline:
     parameters:
-      prod-app-name: 'banking-app-{{timestamp}}'
+      prod-app-name: 'myBankingService'
     schema:
       $ref: deploy.json
